
Version 2.4.1 -> 2.9.0
----------------------
 - renamed the Highlighter's SpanScorer class to HighlighterSpanScorer
 - fixed bug in Makefile's test target which tested installed build
 - added Mac OS X 10.6 section to Makefile
 - added FieldCache.Parser Python extension classes
 - added FieldComparator and FieldComparatorSource Python extension classes
 - 

Version 2.4.0 -> 2.4.1
----------------------
 - PyLucene with JCC now a subproject of the Apache Lucene project
 - documentation moved to http://lucene.apache.org/pylucene
 - added java.util.Arrays to the build to bridge the Java array/collection gap
 - added collections.py module with JavaSet class, a Python java.util.Set
 - fixed bug in PythonQueryParser overriding wrong method (Aaron Lav)
 - PyLucene built with JCC 2.2
 - fixed bug with collections.py shadowing Python 2.6's during build
 - passing strings for byte[] or char[] is no longer supported, use JArray
 - added copy of PyLucene web site to distribution for offline viewing

Version 2.3.2 -> 2.4.0
----------------------
 - fixed Debian bug http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=499599
 - arrays are now wrapped with JArray() instances instead of expanded into lists
 - return by value in arrays now supported
 - PythonTermDocs removed since arrays can now receive values
 - PythonReader removed since arrays now wrapped
 - added InstantiatedIndex contrib to build
 - PyLucene built with JCC 2.1

Version 2.3.1 -> 2.3.2
----------------------
 - fixed code generation for clone() broken by finalization proxy work
 - added 'union' and 'NULL' to the list of reserved words
 - fixed castCheck() to work with finalization proxies
 - added scorePayload() delegator to PythonSimilarityDelegator
 - added support for --install-dir and --use-distutils options
 - added support for INSTALL_OPT to Makefile
 - fixed basic samples to initialize VM
 - added bdist target to Makefile

Version 2.3 -> 2.3.1
--------------------